--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,6 +11,7 @@
   transition-timing-function: ease-in;
   transition: all 0.5s;
 }
+.a{width:80px;height: 22px;}
 
 .nav__black {
     background-color: #111;
